# stygmorgan

./: AUTHORS  ChangeLog  NEWS  README  README.md  autogen.sh  configure.ac
data/: GMDN.txt  GMPresetList.txt  Makefile.am  MisReg  MisSounds.SNDR  MisStyles.STYR.xz
doc/: AUTHORS  DISCLAIMER  Makefile.am  THANKS  TRANSLATE
doc/DSPeffects/: 3volBUS1.asm  3volBUS2.asm  Makefile.am  freberv.asm  fv-basstreble.inc  fv-controls.inc  fv-filters-reduced.inc  fv-filters.inc  fv-routes.inc  michorus.asm  pontodocap  volLR.asm
doc/examples/: 50pop.mid  How_Insensitive.stysong  Makefile.am  There_Will_Be.stysong
doc/html/: Makefile.am  stygmorgan.html
extra/: lista.txt  stystylist  stystylist.C  stystylist.C~
src/: Makefile  Makefile.am  Makefile.in  choice.h  jack.C  jack.h  main.C  speaker2.xpm  stygmaboutui.cxx  stygmaboutui.fl  stygmaboutui.h  stygmdmui.cxx  stygmdmui.fl  stygmdmui.h  stygmeditui.cxx  stygmeditui.fl  stygmeditui.h  stygmhelpui.cxx  stygmhelpui.fl  stygmhelpui.h  stygmicon128.xpm  stygmorgan.C  stygmorgan.chordrecognizer.C  stygmorgan.fileio.C  stygmorgan.graphfunc.C  stygmorgan.h  stygmorgan.harmonizer.C  stygmorgan.midiexport.C  stygmorgan.midiimport.C  stygmorgan.midiin.C  stygmorgan.midiout.C  stygmorgan.misc.C  stygmorgan.organ.C  stygmorgan.sequencer.C  stygmorganui.cxx  stygmorganui.fl  stygmorganui.h  stygmppui.cxx  stygmppui.fl  stygmppui.h  (+9 more)
