bin_PROGRAMS = stygmorgan
stygmorgan_SOURCES = main.C \
	stygmorgan.C \
	stygmorgan.midiimport.C \
	stygmorgan.midiin.C \
	stygmorgan.midiout.C \
	stygmorgan.organ.C \
	stygmorgan.sequencer.C \
	stygmorgan.harmonizer.C \
	stygmorgan.chordrecognizer.C \
        stygmorgan.midiexport.C \
	stygmorganui.cxx \
	stygmorganui.h \
	stygmeditui.cxx \
	stygmeditui.h \
	stygmsequi.cxx \
	stygmsequi.h \
        stygmstui.h \
        stygmstui.cxx \
        stygmppui.h \
        stygmppui.cxx \
        stygmprefui.cxx \
        stygmprefui.h \
        stygmdmui.h \
        stygmdmui.cxx \
        stygmaboutui.cxx \
        stygmaboutui.h \
        stygmhelpui.cxx \
        stygmhelpui.h \
	stygmorgan.fileio.C \
	stygmorgan.misc.C \
	stygmorgan.graphfunc.C \
	speaker2.xpm \
	stygmicon128.xpm \
	speaker2.xpm \
	choice.h \
	jack.h \
	jack.C \
	stygmorgan.h


