docdir = $(prefix)/share/doc/${PACKAGE}/DSPeffects
doc_DATA= pontodocap \
	volLR.asm \
	3volBUS1.asm \
	3volBUS2.asm \
	michorus.asm \
	gain_4.asm \
	freberv.asm \
	emu_constants.inc \
	emu_constants.asm \
	fv-controls.inc \
	fv-filters-reduced.inc \
	refl-big.inc \
	fv-basstreble.inc \
	fv-filters.inc \
	fv-routes.inc \
	refl-default.inc

EXTRA_DIST = $(doc_DATA)	
	
	
	
	