docdir = $(prefix)/share/doc/${PACKAGE}/html
doc_DATA= stygmorgan.html \
	MainWin.png \
	MezWin.png \
	MoreWin.png \
	stygmorgandia.png \
	stygmicon128back2.jpg \
	editevent.png \
	editevent1.png \
	stygmicon128.png \
	MidiDrum.png \
	EvWin.png \
	EdPatWin.png \
	EdStyWin.png \
	SeqWin.png \
	SeqWin1.png \
	TempoTrack.png
	
EXTRA_DIST = $(doc_DATA)	
	
	
	
	
	
	